{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 46,
  "lineage": "e87e2a93-8421-abd3-b3e3-0f7dbf25c963",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b072a126ca659825",
            "arn": "arn:aws:ec2:us-east-1:605855663470:elastic-ip/eipalloc-0b072a126ca659825",
            "association_id": "eipassoc-014703a020210424c",
            "domain": "vpc",
            "id": "eipalloc-0b072a126ca659825",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02a30f4fc2fad65c1",
            "private_dns": "ip-10-0-1-94.ec2.internal",
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-32-197-29-22.compute-1.amazonaws.com",
            "public_ip": "32.197.29.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-eip-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-eip-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02de7bd6785eeda3b",
            "arn": "arn:aws:ec2:us-east-1:605855663470:elastic-ip/eipalloc-02de7bd6785eeda3b",
            "association_id": "eipassoc-005113b594b881064",
            "domain": "vpc",
            "id": "eipalloc-02de7bd6785eeda3b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ef5ab20862350a2f",
            "private_dns": "ip-10-0-2-70.ec2.internal",
            "private_ip": "10.0.2.70",
            "public_dns": "ec2-100-24-188-37.compute-1.amazonaws.com",
            "public_ip": "100.24.188.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-eip-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-eip-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:internet-gateway/igw-0c7bee0ce1a8fc219",
            "id": "igw-0c7bee0ce1a8fc219",
            "owner_id": "605855663470",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-igw",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-igw",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b072a126ca659825",
            "association_id": "eipassoc-014703a020210424c",
            "connectivity_type": "public",
            "id": "nat-05a692515b3cca619",
            "network_interface_id": "eni-02a30f4fc2fad65c1",
            "private_ip": "10.0.1.94",
            "public_ip": "32.197.29.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df067557095a7cb4",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02de7bd6785eeda3b",
            "association_id": "eipassoc-005113b594b881064",
            "connectivity_type": "public",
            "id": "nat-07f5e024680f9e190",
            "network_interface_id": "eni-0ef5ab20862350a2f",
            "private_ip": "10.0.2.70",
            "public_ip": "100.24.188.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09e1f63aa3bde7904",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-nat-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:route-table/rtb-0a315a90d6c618d59",
            "id": "rtb-0a315a90d6c618d59",
            "owner_id": "605855663470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a692515b3cca619",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-rt-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-rt-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:route-table/rtb-03347619651ac3133",
            "id": "rtb-03347619651ac3133",
            "owner_id": "605855663470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f5e024680f9e190",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-rt-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-rt-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:route-table/rtb-0029a2903ed98b8d0",
            "id": "rtb-0029a2903ed98b8d0",
            "owner_id": "605855663470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7bee0ce1a8fc219",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-public-rt",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-public-rt",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f0a0376244b7dc1",
            "route_table_id": "rtb-0a315a90d6c618d59",
            "subnet_id": "subnet-0c5b33efce4351944"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0543491751e95cd8e",
            "route_table_id": "rtb-03347619651ac3133",
            "subnet_id": "subnet-08086c8945dd6128a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac805efac445524",
            "route_table_id": "rtb-0029a2903ed98b8d0",
            "subnet_id": "subnet-0df067557095a7cb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090791ce897ba6942",
            "route_table_id": "rtb-0029a2903ed98b8d0",
            "subnet_id": "subnet-09e1f63aa3bde7904"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:security-group/sg-042b1ba40fc8f0173",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042b1ba40fc8f0173",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "shopease-development-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "605855663470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-vpc-endpoints-sg",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-vpc-endpoints-sg",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:subnet/subnet-0c5b33efce4351944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5b33efce4351944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605855663470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-subnet-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-subnet-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:subnet/subnet-08086c8945dd6128a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08086c8945dd6128a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605855663470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-subnet-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-private-subnet-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:subnet/subnet-0df067557095a7cb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df067557095a7cb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605855663470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-public-subnet-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-public-subnet-1",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:subnet/subnet-09e1f63aa3bde7904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e1f63aa3bde7904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605855663470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-public-subnet-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-public-subnet-2",
              "Owner": "devops@shopease.com",
              "Project": "shopease",
              "kubernetes.io/cluster/shopease-development-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:vpc/vpc-0907f023f935ca317",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b84b7584c16c39d",
            "default_route_table_id": "rtb-028f4996e88a014bb",
            "default_security_group_id": "sg-0970a982475be0759",
            "dhcp_options_id": "dopt-00f4e723d98b05507",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0907f023f935ca317",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028f4996e88a014bb",
            "owner_id": "605855663470",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-vpc",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-vpc",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:vpc-endpoint/vpce-07568be506796f781",
            "dns_entry": [
              {
                "dns_name": "vpce-07568be506796f781-xsmnxh20.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07568be506796f781-xsmnxh20-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07568be506796f781-xsmnxh20-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01429193PY896LOWQCGN"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z0177419N2GCTALSBS7M"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07568be506796f781",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c2d7fcd2ab32e924",
              "eni-0f0df1278d536f248"
            ],
            "owner_id": "605855663470",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-042b1ba40fc8f0173"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.164",
                "subnet_id": "subnet-0c5b33efce4351944"
              },
              {
                "ipv4": "10.0.20.239",
                "subnet_id": "subnet-08086c8945dd6128a"
              }
            ],
            "subnet_ids": [
              "subnet-08086c8945dd6128a",
              "subnet-0c5b33efce4351944"
            ],
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-ec2-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-ec2-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:vpc-endpoint/vpce-01598384074fe5bb1",
            "dns_entry": [
              {
                "dns_name": "vpce-01598384074fe5bb1-lhtvxeze.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01598384074fe5bb1-lhtvxeze-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01598384074fe5bb1-lhtvxeze-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01790912EJ0VN08P9JCN"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0687773214FUL4M4210O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01598384074fe5bb1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d776ba4c905e5e7b",
              "eni-0f1a674e17340e85a"
            ],
            "owner_id": "605855663470",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-042b1ba40fc8f0173"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.12",
                "subnet_id": "subnet-0c5b33efce4351944"
              },
              {
                "ipv4": "10.0.20.164",
                "subnet_id": "subnet-08086c8945dd6128a"
              }
            ],
            "subnet_ids": [
              "subnet-08086c8945dd6128a",
              "subnet-0c5b33efce4351944"
            ],
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-ecr-api-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-ecr-api-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:vpc-endpoint/vpce-03e71406444e2402d",
            "dns_entry": [
              {
                "dns_name": "vpce-03e71406444e2402d-7w7n6761.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e71406444e2402d-7w7n6761-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e71406444e2402d-7w7n6761-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03891631GK8YDMWQYT9"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03891631GK8YDMWQYT9"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z06845961G8EODHTU89KI"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z06845961G8EODHTU89KI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03e71406444e2402d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0376775fa62af6b4e",
              "eni-0ddab0b0356dc9c15"
            ],
            "owner_id": "605855663470",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-042b1ba40fc8f0173"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.244",
                "subnet_id": "subnet-0c5b33efce4351944"
              },
              {
                "ipv4": "10.0.20.118",
                "subnet_id": "subnet-08086c8945dd6128a"
              }
            ],
            "subnet_ids": [
              "subnet-08086c8945dd6128a",
              "subnet-0c5b33efce4351944"
            ],
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-ecr-dkr-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-ecr-dkr-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605855663470:vpc-endpoint/vpce-03dfe5b3d612bb185",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03dfe5b3d612bb185",
            "ip_address_type": "ipv4",
            "owner_id": "605855663470",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03347619651ac3133",
              "rtb-0a315a90d6c618d59"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-s3-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "tags_all": {
              "Application": "ShopEase-Ecommerce",
              "CostCenter": "engineering",
              "CreatedBy": "platform-team",
              "Environment": "development",
              "Layer": "1-infrastructure",
              "ManagedBy": "Terraform",
              "Name": "shopease-development-s3-endpoint",
              "Owner": "devops@shopease.com",
              "Project": "shopease"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0907f023f935ca317"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}